--- a/forgotID/sass/forgotClientId.scss
+++ b/forgotID/sass/forgotClientId.scss
@@ -1,3 +1,7 @@
+body {
+    background: transparent;
+}
+
 .modal-backdrop.in {
     opacity: 0.9;
     filter: alpha(opacity=90);
@@ -11,18 +15,18 @@
     color: #fff;
 }
 
-.modal .modal-footer {
+.modal-footer {
     text-align:left;
 }
 
-.modal .modal-footer a:hover,
-.modal .modal-footer a:visited,
-.modal .modal-footer a {
+.modal-footer a:hover,
+.modal-footer a:visited,
+.modal-footer a {
     color: #9298a6;
     text-decoration:none;
 }
 
-.modal .login-button {
+.login-button {
     margin-top: 60px;
     padding: 0 43px;
     line-height: 30px;
@@ -35,31 +39,31 @@
     width: 100%;
 }
 
-.modal .login-button:hover {
+.login-button:hover {
     background-color: #32af3d;
     color: #fff;
 }
 
-.modal .modal-content {
+.modal-content {
     border-radius: 0px;
     width: 320px;
     background-color: #1e2738;
 }
 
-.modal .modal-body:after {
+.modal-body:after {
     display: table;
     clear: both;
     content: "";
 }
 
-.modal .modal-header {
+.modal-header {
     border-bottom: none;
     padding-left: 30px;
     padding-top: 30px;
     padding-bottom: 10px;
 }
 
-.modal .modal-body {
+.modal-body {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
@@ -67,12 +71,12 @@
     color: #686f82;
 }
 
-.modal .modal-body p {
+.modal-body p {
     line-height: 2;
     font-weight: bold;
 }
 
-.modal .modal-footer {
+.modal-footer {
     padding-left: 30px;
     font-size: 12px;
     background-color: #293243;
@@ -81,7 +85,7 @@
     font-weight: bold;
 }
 
-.modal .modal-footer span {
+.modal-footer span {
     display: block;
 }
 
