--- a/forgotID/stylesheets/forgotClientId.css
+++ b/forgotID/stylesheets/forgotClientId.css
@@ -1,34 +1,39 @@
 /* line 1, ../sass/forgotClientId.scss */
+body {
+  background: transparent;
+}
+
+/* line 5, ../sass/forgotClientId.scss */
 .modal-backdrop.in {
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
 
-/* line 6, ../sass/forgotClientId.scss */
+/* line 10, ../sass/forgotClientId.scss */
 .modal-dialog {
   width: 320px;
 }
 
-/* line 10, ../sass/forgotClientId.scss */
+/* line 14, ../sass/forgotClientId.scss */
 .modal-title {
   color: #fff;
 }
 
-/* line 14, ../sass/forgotClientId.scss */
-.modal .modal-footer {
+/* line 18, ../sass/forgotClientId.scss */
+.modal-footer {
   text-align: left;
 }
 
-/* line 18, ../sass/forgotClientId.scss */
-.modal .modal-footer a:hover,
-.modal .modal-footer a:visited,
-.modal .modal-footer a {
+/* line 22, ../sass/forgotClientId.scss */
+.modal-footer a:hover,
+.modal-footer a:visited,
+.modal-footer a {
   color: #9298a6;
   text-decoration: none;
 }
 
-/* line 25, ../sass/forgotClientId.scss */
-.modal .login-button {
+/* line 29, ../sass/forgotClientId.scss */
+.login-button {
   margin-top: 60px;
   padding: 0 43px;
   line-height: 30px;
@@ -41,36 +46,36 @@
   width: 100%;
 }
 
-/* line 38, ../sass/forgotClientId.scss */
-.modal .login-button:hover {
+/* line 42, ../sass/forgotClientId.scss */
+.login-button:hover {
   background-color: #32af3d;
   color: #fff;
 }
 
-/* line 43, ../sass/forgotClientId.scss */
-.modal .modal-content {
+/* line 47, ../sass/forgotClientId.scss */
+.modal-content {
   border-radius: 0px;
   width: 320px;
   background-color: #1e2738;
 }
 
-/* line 49, ../sass/forgotClientId.scss */
-.modal .modal-body:after {
+/* line 53, ../sass/forgotClientId.scss */
+.modal-body:after {
   display: table;
   clear: both;
   content: "";
 }
 
-/* line 55, ../sass/forgotClientId.scss */
-.modal .modal-header {
+/* line 59, ../sass/forgotClientId.scss */
+.modal-header {
   border-bottom: none;
   padding-left: 30px;
   padding-top: 30px;
   padding-bottom: 10px;
 }
 
-/* line 62, ../sass/forgotClientId.scss */
-.modal .modal-body {
+/* line 66, ../sass/forgotClientId.scss */
+.modal-body {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
@@ -78,14 +83,14 @@
   color: #686f82;
 }
 
-/* line 70, ../sass/forgotClientId.scss */
-.modal .modal-body p {
+/* line 74, ../sass/forgotClientId.scss */
+.modal-body p {
   line-height: 2;
   font-weight: bold;
 }
 
-/* line 75, ../sass/forgotClientId.scss */
-.modal .modal-footer {
+/* line 79, ../sass/forgotClientId.scss */
+.modal-footer {
   padding-left: 30px;
   font-size: 12px;
   background-color: #293243;
@@ -94,12 +99,12 @@
   font-weight: bold;
 }
 
-/* line 84, ../sass/forgotClientId.scss */
-.modal .modal-footer span {
+/* line 88, ../sass/forgotClientId.scss */
+.modal-footer span {
   display: block;
 }
 
-/* line 88, ../sass/forgotClientId.scss */
+/* line 92, ../sass/forgotClientId.scss */
 .modal-header .close {
   color: #717885;
   text-shadow: none;
