--- a/forgotID/stylesheets/forgotClientId.css
+++ b/forgotID/stylesheets/forgotClientId.css
@@ -6,22 +6,27 @@ body {
 /* line 5, ../sass/forgotClientId.scss */
 .modal-title {
   color: #fff;
+  font-weight: 700;
 }
 
-/* line 9, ../sass/forgotClientId.scss */
+/* line 10, ../sass/forgotClientId.scss */
 .modal-footer {
   text-align: left;
 }
 
-/* line 13, ../sass/forgotClientId.scss */
+/* line 14, ../sass/forgotClientId.scss */
+.modal-body a:hover,
+.modal-body a:visited,
+.modal-body a,
 .modal-footer a:hover,
 .modal-footer a:visited,
 .modal-footer a {
+  display: block;
   color: #9298a6;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
-/* line 20, ../sass/forgotClientId.scss */
+/* line 25, ../sass/forgotClientId.scss */
 .login-button {
   margin-top: 60px;
   padding: 0 43px;
@@ -35,71 +40,127 @@ body {
   width: 100%;
 }
 
-/* line 33, ../sass/forgotClientId.scss */
+/* line 38, ../sass/forgotClientId.scss */
 .login-button:hover {
   background-color: #32af3d;
   color: #fff;
 }
 
-/* line 38, ../sass/forgotClientId.scss */
+/* line 43, ../sass/forgotClientId.scss */
 .modal-content {
   border-radius: 0px;
   width: 320px;
   background-color: #1e2738;
 }
 
-/* line 44, ../sass/forgotClientId.scss */
+/* line 49, ../sass/forgotClientId.scss */
 .modal-body:after {
   display: table;
   clear: both;
   content: "";
 }
 
-/* line 50, ../sass/forgotClientId.scss */
+/* line 55, ../sass/forgotClientId.scss */
 .modal-header {
   border-bottom: none;
   padding-left: 30px;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  padding-top: 46px;
+  padding-bottom: 5px;
 }
 
-/* line 57, ../sass/forgotClientId.scss */
+/* line 62, ../sass/forgotClientId.scss */
 .modal-body {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
-  font-size: 12px;
+  font-size: 13px;
   color: #686f82;
+  font-weight: 700;
 }
 
-/* line 65, ../sass/forgotClientId.scss */
+/* line 71, ../sass/forgotClientId.scss */
 .modal-body p {
   line-height: 2;
-  font-weight: bold;
 }
 
-/* line 70, ../sass/forgotClientId.scss */
+/* line 75, ../sass/forgotClientId.scss */
 .modal-footer {
   padding-left: 30px;
-  font-size: 12px;
+  font-size: 13px;
   background-color: #293243;
   color: #686f82;
   border-top: none;
   font-weight: bold;
 }
 
-/* line 79, ../sass/forgotClientId.scss */
+/* line 84, ../sass/forgotClientId.scss */
 .modal-footer span {
   display: block;
 }
 
-/* line 83, ../sass/forgotClientId.scss */
+/* line 88, ../sass/forgotClientId.scss */
 .modal-header .close {
   color: #717885;
   text-shadow: none;
   opacity: 1;
   float: none;
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 7px;
+  top: 3px;
+  font-size: 34px;
+  font-weight: 400;
+}
+
+/* line 100, ../sass/forgotClientId.scss */
+.form-group {
+  margin-bottom: 20px;
+}
+
+/* line 104, ../sass/forgotClientId.scss */
+.form-control {
+  height: 40px;
+  background-color: #0b1423;
+  border-color: #3d4657;
+  border-radius: 0;
+}
+
+/* line 111, ../sass/forgotClientId.scss */
+.form-control:focus {
+  border-color: #677081;
+  box-shadow: none;
+}
+
+/* line 116, ../sass/forgotClientId.scss */
+.form-control.validation {
+  border-color: #af2727;
+}
+
+/* line 120, ../sass/forgotClientId.scss */
+.modal-body .btn {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #2fa73b;
+  border-radius: 0;
+  border-color: #2fa73b;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+/* line 130, ../sass/forgotClientId.scss */
+.modal-body .btn:hover,
+.modal-body .btn:focus {
+  background-color: #2fa73b;
+}
+
+/* line 135, ../sass/forgotClientId.scss */
+.modal-body .help-block {
+  margin-top: -2px;
+  margin-bottom: 19px;
+  line-height: 23px;
+  color: #686f82;
+}
+
+/* line 142, ../sass/forgotClientId.scss */
+.modal-body a {
+  margin-top: 16px;
 }
