--- a/forgotID/sass/forgotClientId.scss
+++ b/forgotID/sass/forgotClientId.scss
@@ -2,6 +2,15 @@ body {
     background: transparent;
 }
 
+.modal-backdrop.in {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+
+.modal-dialog {
+  width: 320px;
+}
+
 .modal-title {
     color: #fff;
     font-weight: 700;
