--- a/forgotID/stylesheets/forgotClientId.css
+++ b/forgotID/stylesheets/forgotClientId.css
@@ -4,17 +4,28 @@ body {
 }
 
 /* line 5, ../sass/forgotClientId.scss */
+.modal-backdrop.in {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+
+/* line 10, ../sass/forgotClientId.scss */
+.modal-dialog {
+  width: 320px;
+}
+
+/* line 14, ../sass/forgotClientId.scss */
 .modal-title {
   color: #fff;
   font-weight: 700;
 }
 
-/* line 10, ../sass/forgotClientId.scss */
+/* line 19, ../sass/forgotClientId.scss */
 .modal-footer {
   text-align: left;
 }
 
-/* line 14, ../sass/forgotClientId.scss */
+/* line 23, ../sass/forgotClientId.scss */
 .modal-body a:hover,
 .modal-body a:visited,
 .modal-body a,
@@ -26,7 +37,7 @@ body {
   text-decoration: underline;
 }
 
-/* line 25, ../sass/forgotClientId.scss */
+/* line 34, ../sass/forgotClientId.scss */
 .login-button {
   margin-top: 60px;
   padding: 0 43px;
@@ -40,27 +51,27 @@ body {
   width: 100%;
 }
 
-/* line 38, ../sass/forgotClientId.scss */
+/* line 47, ../sass/forgotClientId.scss */
 .login-button:hover {
   background-color: #32af3d;
   color: #fff;
 }
 
-/* line 43, ../sass/forgotClientId.scss */
+/* line 52, ../sass/forgotClientId.scss */
 .modal-content {
   border-radius: 0px;
   width: 320px;
   background-color: #1e2738;
 }
 
-/* line 49, ../sass/forgotClientId.scss */
+/* line 58, ../sass/forgotClientId.scss */
 .modal-body:after {
   display: table;
   clear: both;
   content: "";
 }
 
-/* line 55, ../sass/forgotClientId.scss */
+/* line 64, ../sass/forgotClientId.scss */
 .modal-header {
   border-bottom: none;
   padding-left: 30px;
@@ -68,7 +79,7 @@ body {
   padding-bottom: 5px;
 }
 
-/* line 62, ../sass/forgotClientId.scss */
+/* line 71, ../sass/forgotClientId.scss */
 .modal-body {
   padding-left: 30px;
   padding-right: 30px;
@@ -78,12 +89,12 @@ body {
   font-weight: 700;
 }
 
-/* line 71, ../sass/forgotClientId.scss */
+/* line 80, ../sass/forgotClientId.scss */
 .modal-body p {
   line-height: 2;
 }
 
-/* line 75, ../sass/forgotClientId.scss */
+/* line 84, ../sass/forgotClientId.scss */
 .modal-footer {
   padding-left: 30px;
   font-size: 13px;
@@ -93,12 +104,12 @@ body {
   font-weight: bold;
 }
 
-/* line 84, ../sass/forgotClientId.scss */
+/* line 93, ../sass/forgotClientId.scss */
 .modal-footer span {
   display: block;
 }
 
-/* line 88, ../sass/forgotClientId.scss */
+/* line 97, ../sass/forgotClientId.scss */
 .modal-header .close {
   color: #717885;
   text-shadow: none;
@@ -111,12 +122,12 @@ body {
   font-weight: 400;
 }
 
-/* line 100, ../sass/forgotClientId.scss */
+/* line 109, ../sass/forgotClientId.scss */
 .form-group {
   margin-bottom: 20px;
 }
 
-/* line 104, ../sass/forgotClientId.scss */
+/* line 113, ../sass/forgotClientId.scss */
 .form-control {
   height: 40px;
   background-color: #0b1423;
@@ -124,18 +135,18 @@ body {
   border-radius: 0;
 }
 
-/* line 111, ../sass/forgotClientId.scss */
+/* line 120, ../sass/forgotClientId.scss */
 .form-control:focus {
   border-color: #677081;
   box-shadow: none;
 }
 
-/* line 116, ../sass/forgotClientId.scss */
+/* line 125, ../sass/forgotClientId.scss */
 .form-control.validation {
   border-color: #af2727;
 }
 
-/* line 120, ../sass/forgotClientId.scss */
+/* line 129, ../sass/forgotClientId.scss */
 .modal-body .btn {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -146,13 +157,13 @@ body {
   font-weight: 700;
 }
 
-/* line 130, ../sass/forgotClientId.scss */
+/* line 139, ../sass/forgotClientId.scss */
 .modal-body .btn:hover,
 .modal-body .btn:focus {
   background-color: #2fa73b;
 }
 
-/* line 135, ../sass/forgotClientId.scss */
+/* line 144, ../sass/forgotClientId.scss */
 .modal-body .help-block {
   margin-top: -2px;
   margin-bottom: 19px;
@@ -160,7 +171,7 @@ body {
   color: #686f82;
 }
 
-/* line 142, ../sass/forgotClientId.scss */
+/* line 151, ../sass/forgotClientId.scss */
 .modal-body a {
   margin-top: 16px;
 }
