--- a/forgotID/sass/forgotClientId.scss
+++ b/forgotID/sass/forgotClientId.scss
@@ -111,13 +111,17 @@ body {
     background-color: #2fa73b;
     border-radius: 0;
     border-color: #2fa73b;
+    color: #fff;
     font-size: 15px;
     font-weight: 700;
+    text-decoration: none;
 }
 
 .modal-body .btn:hover,
 .modal-body .btn:focus {
     background-color: #2fa73b;
+    color: #fff;
+    text-decoration: none;
 }
 
 .modal-body .help-block {
@@ -129,4 +133,31 @@ body {
 
 .modal-body a {
     margin-top: 16px; 
+}
+
+/*
+validation style
+*/
+.popover {
+    border: 0;
+    background-color: #af2727;
+    border-radius: 0;
+    box-shadow: 0;
+    color: #fff;
+    margin-top: -60px;
+    margin-left: 14px !important;
+}
+
+.popover.right > .arrow {
+    border-right-color: transparent; 
+}
+
+.popover > .arrow::after {
+    bottom: -7px !important;
+    border-right-color: #af2727 !important;
+    border-width: 7px 10px;
+}
+
+.popover-content {
+    padding: 9px 25px 9px 14px;
 }
