--- a/forgotID/stylesheets/forgotEmail.css
+++ b/forgotID/stylesheets/forgotEmail.css
@@ -135,61 +135,6 @@ body {
   margin-top: 16px;
 }
 
-/*
-validation style
-*/
-.popover {
-  border: 0;
-  background-color: #af2727;
-  border-radius: 0;
-  box-shadow: 0;
-  color: #fff;
-}
-
-.popover.right > .arrow {
-  border-right-color: transparent;
-}
-
-.popover > .arrow::after {
-  bottom: -7px !important;
-  border-right-color: #af2727 !important;
-  border-width: 7px 10px;
-}
-
-.popover-content {
-  padding: 9px 25px 9px 14px;
-}
-
-.popover-title {
-  display: none;
-}
-
-/*
-check email
-*/
-.help-block .user-email {
-  display: block;
-  color: #9298a6;
-}
-
-.help-block a {
-  margin-top: 0;
-}
-
-.check-ok {
-  margin-top: -17px;
-  margin-bottom: 29px;
-  padding: 18px;
-  border-radius: 35px;
-  background-color: #2fa73b;
-  color: #fff;
-  font-size: 34px;
-}
-
-.modal-header {
-  text-align: center;
-}
-
-.modal-header .modal-title {
-  text-align: left;
+.modal-body .help-block {
+  margin-bottom: 62px;
 }
