sync mobile css

--- a/forgotID/stylesheets/forgotClientIdMobile.css
+++ b/forgotID/stylesheets/forgotClientIdMobile.css
@@ -32,15 +32,16 @@ body {
   opacity: 1;
   float: none;
   position: absolute;
-  right: 7px;
+  right: 11px;
   top: 3px;
-  font-size: 34px;
+  font-size: 46px;
   font-weight: 400;
 }
 
 .modal-title {
   color: #fff;
   font-weight: 700;
+  font-size: 20px;
 }
 
 .modal-footer {
@@ -54,7 +55,7 @@ body {
 .modal-footer a:visited,
 .modal-footer a {
   display: block;
-  color: #9298a6;
+  color: #b9bcc5;
   text-decoration: underline;
 }
 
@@ -65,12 +66,13 @@ body {
 }
 
 .modal-body {
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 30px;
-  font-size: 13px;
-  color: #686f82;
-  font-weight: 700;
+  padding: 10px 30px 50px;
+  font-size: 15px;
+  /*different from desktop*/
+  color: #9298a6;
+  /*different from desktop*/
+  font-weight: 400;
+  /*different from desktop*/
 }
 
 .modal-body p {
@@ -78,12 +80,13 @@ body {
 }
 
 .modal-footer {
+  padding: 25px 30px 23px;
   padding-left: 30px;
-  font-size: 13px;
+  font-size: 15px;
   background-color: #293243;
-  color: #686f82;
+  color: #9298a6;
   border-top: none;
-  font-weight: bold;
+  font-weight: 400;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -94,7 +97,13 @@ body {
 }
 
 .form-group {
+  position: relative;
   margin-bottom: 20px;
+}
+
+.form-group label {
+  margin-bottom: 15px;
+  font-weight: 400;
 }
 
 .form-control {
@@ -102,6 +111,8 @@ body {
   background-color: #0b1423;
   border-color: #3d4657;
   border-radius: 0;
+  font-size: 13px;
+  color: #babdc4;
 }
 
 .form-control:focus {
@@ -119,22 +130,57 @@ body {
   background-color: #2fa73b;
   border-radius: 0;
   border-color: #2fa73b;
+  color: #fff;
   font-size: 15px;
   font-weight: 700;
+  text-decoration: none;
 }
 
 .modal-body .btn:hover,
 .modal-body .btn:focus {
+  outline-color: #2fa73b;
   background-color: #2fa73b;
+  color: #fff;
+  text-decoration: none;
 }
 
 .modal-body .help-block {
   margin-top: -2px;
-  margin-bottom: 19px;
+  margin-bottom: 29px;
   line-height: 23px;
-  color: #686f82;
+  color: #9298a6;
 }
 
 .modal-body a {
-  margin-top: 16px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+
+/*
+validation style
+*/
+.popover {
+  margin-top: -51px !important;
+  width: 100%;
+  max-width: none;
+  border: 0;
+  background-color: #af2727;
+  border-radius: 0;
+  box-shadow: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.popover.bottom > .arrow {
+  border-bottom-color: transparent;
+}
+
+.popover > .arrow::after {
+  margin-left: -7px !important;
+  border-bottom-color: #af2727 !important;
+  border-width: 10px 7px;
+}
+
+.popover-content {
+  padding: 9px 21px;
 }
